syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "common.proto";

package administrationService;

option java_package = "ar.edu.itba.pod.administrationService";
option java_outer_classname = "AdministrationServiceModel";
option java_multiple_files = true;

service administrationService{
  rpc AddRoom(google.protobuf.Empty) returns (Room);
  rpc AddDoctor(Doctor) returns (Doctor);
  rpc ChangeDoctorAvailability(RequestDoctor) returns (Doctor);
  rpc GetDoctorAvailability(google.protobuf.StringValue) returns (Doctor);
}

// Si el ID es negativo, hubo error
message Room {
  int32 id = 1;
  bool isEmpty = 2;
}
/*
 * Si cdo devolvemos el level es -1 es xq el level es invalido,
 * si es -2 xq el dr ya existe
 * si es -3 xq la disponibilidad esta mal (esta atendiendo y lo quiero ocupar)
 */
message Doctor {
  string name = 1;
  int32 level = 2;
  bool availability = 3;
}

message RequestDoctor{
  string name = 1;
  bool availability = 2;
}
